--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "aws-sdk": "^2.570.0",
+    "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
-    "bootstrap": "^4.3.1",
     "moment": "^2.22.2",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-router-prop-types": "^1.0.4",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.0",
@@ -31,7 +34,7 @@
     "husky": "^1.0.0-rc.15",
     "lint-staged": "^7.3.0",
     "prettier": "1.14.3",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
