--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "amazon-cognito-auth-js": "^1.3.2",
     "amazon-cognito-identity-js": "^3.2.0",
+    "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
