--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-router-prop-types": "^1.0.4",
