--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "husky": "^1.0.0-rc.15",
     "lint-staged": "^7.3.0",
     "prettier": "1.14.3",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
