Added orders pages

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-router-prop-types": "^1.0.4",
     "styled-components": "^4.4.1",
     "subscriptions-transport-ws": "^0.9.16",
-    "date-fns": "latest"
+    "date-fns": "^2.8.1"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.0",
